--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <img src="https://iili.io/fPkRN5u.png" alt="Logo IBJ" class="church-logo">
         
         <p class="hashtag">#IBJ21ANOS</p>
-        <h1>RETIRO ESPIRITUAL 2026</h1>
+        <h1>RETIRO ESPIRITUAL - IBJ 2026</h1>
         <div class="date-badge">13/02 a 17/02 | Chácara Status</div>
 
         <div class="countdown-wrapper">
@@ -294,3 +294,4 @@
     </script>
 </body>
 </html>
+
