--- a/index.html
+++ b/index.html
@@ -181,12 +181,56 @@
         </a>
     </section>
 
-    <section class="about-section">
-        <h2 class="section-title">Sobre o nosso Retiro</h2>
-        <div class="about-text">
-            <p>Um tempo de renovo, comunhão intensa e busca pela presença de Deus. Nosso retiro é o momento perfeito para desconectar do mundo e reconectar com o que realmente importa. Prepare seu coração para dias inesquecíveis em meio à natureza na Chácara Status.</p>
-        </div>
-    </section>
+    <section style="padding:100px 20px; text-align:center; background-color:#ffffff; color:#1a1a1a;">
+    
+    <h2 style="
+        color:#1a8b64;
+        font-size:2.5rem;
+        text-transform:uppercase;
+        margin-bottom:25px;
+        font-weight:800;
+    ">
+        Sobre o nosso Retiro
+    </h2>
+
+    <div style="
+        font-size:1.15rem;
+        line-height:1.8;
+        color:#333;
+        max-width:900px;
+        margin:0 auto;
+        text-align:justify;
+    ">
+        <p>
+            Um tempo separado por Deus para renovo, restauração e comunhão intensa em Sua presença.
+            O retiro é mais do que alguns dias fora da rotina, é um convite para desacelerar e permitir
+            que Deus fale conosco de forma clara.
+        </p>
+
+        <p>
+            Em meio à correria do dia a dia, muitas vezes nos afastamos do essencial, e o retiro surge
+            como esse espaço de reencontro, cuidado e crescimento espiritual.
+        </p>
+
+        <p>
+            Prepare o seu coração para dias marcantes de louvor, adoração e celebração, acompanhados
+            de estudo da Palavra de Deus, momentos de oração, comunhão entre irmãos e experiências
+            que fortalecem a fé. Tudo isso vivido em um ambiente acolhedor, cercado pela natureza
+            na Chácara Status.
+        </p>
+
+        <p>
+            Serão dias para criar memórias, fortalecer vínculos, ouvir a voz de Deus e renovar as forças
+            para continuar a caminhada.
+        </p>
+
+        <p style="text-align:center; font-weight:700; margin-top:25px;">
+            Vamos juntos nessa jornada!
+        </p>
+    </div>
+
+</section>
+
 
     <section class="carousel-section">
         <h2 class="section-title" style="color: var(--primary-green); text-align: center;">Memórias que Transformam</h2>
@@ -294,5 +338,3 @@
     </script>
 </body>
 </html>
-
-
