--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Retiro Espiritual 2026 - IBJ</title>
     
-    <link rel="icon" type="image/png" href="https://iili.io/fPkQ1cb.png">
+    <link rel="icon" type="image/png" href="https://iili.io/fPsqAR1.md.png">
     
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;700;800&display=swap" rel="stylesheet">
     <style>
