--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 <h2 style="margin-top:0">Inscrição e Pagamento</h2>
                 <p>Chave Pix (Telefone):</p>
                 <span class="pix-key-display">65 99844-6011</span>
-                <p>Link para Inscrição: <br><a href="https://bit.ly/retiroibj26" style="color:#007bff; font-weight:bold; text-decoration: none;">bit.ly/retiroibj26</a></p>
+                <p>Link para Inscrição: <br><a href="https://bit.ly/retiroibj26" style="color:#1ba371; font-weight:bold; text-decoration: none;">bit.ly/retiroibj26</a></p>
                 
                 <a href="https://bit.ly/retiroibj26" class="qr-link" target="_blank">
                     <img src="https://iili.io/fPk3sOF.png" alt="QR Code Inscrição" class="qr-code-img">
