--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
             height: auto;
             z-index: 0;
             transform: translate(-50%, -50%);
-            opacity: 0.3; /* Opacidade reduzida */
+            opacity: 0.3; 
             object-fit: cover;
         }
 
         .carousel-content {
             position: relative;
-            z-index: 1; /* Garante que o texto e imagens fiquem na frente */
+            z-index: 1; 
         }
 
         .carousel-subtitle { color: #ffffff; font-size: 1.2rem; text-align: center; margin-bottom: 40px; font-weight: 700; font-style: italic; }
@@ -259,7 +259,7 @@
 
     <section class="carousel-section">
         <video autoplay muted loop playsinline class="video-bg">
-            <source src="C:\Users\Davi Lima\Documents\Faculdade\Matérias\Laboratório de Programação\Visual Studio_Davi Lima\01_Igreja\video_retiro.mp4" type="video/mp4">
+            <source src="video_retiro.mp4" type="video/mp4">
             Seu navegador não suporta vídeos.
         </video>
         
@@ -298,7 +298,7 @@
                 <h2 style="margin-top:0">Inscrição e Pagamento</h2>
                 <p>Chave Pix (Telefone):</p>
                 <span class="pix-key-display">65 99844-6011</span>
-                <p>Link para Inscrição: <br><a href="https://bit.ly/retiroibj26" style="color:#1ba371; font-weight:bold; text-decoration: none;">bit.ly/retiroibj26</a></p>
+                <p>Link para Inscrição: <br><a href="https://bit.ly/retiroibj26" style="color:#007bff; font-weight:bold; text-decoration: none;">bit.ly/retiroibj26</a></p>
                 
                 <a href="https://bit.ly/retiroibj26" class="qr-link" target="_blank">
                     <img src="https://iili.io/fPk3sOF.png" alt="QR Code Inscrição" class="qr-code-img">
