--- a/index.html
+++ b/index.html
@@ -208,54 +208,35 @@
 
     <section style="padding:100px 20px; text-align:center; background-color:#ffffff; color:#1a1a1a;">
     
-    <h2 style="
-        color:#1a8b64;
-        font-size:2.5rem;
-        text-transform:uppercase;
-        margin-bottom:25px;
-        font-weight:800;
-    ">
-        Sobre o nosso Retiro
-    </h2>
+        <h2 style="color:#1a8b64; font-size:2.5rem; text-transform:uppercase; margin-bottom:25px; font-weight:800;">
+            Sobre o nosso Retiro
+        </h2>
 
-    <div style="
-        font-size:1.15rem;
-        line-height:1.8;
-        color:#333;
-        max-width:900px;
-        margin:0 auto;
-        text-align:justify;
-    ">
-        <p>
-            Um tempo separado por Deus para renovo, restauração e comunhão intensa em Sua presença.
-            O retiro é mais do que alguns dias fora da rotina, é um convite para desacelerar e permitir
-            que Deus fale conosco de forma clara.
-        </p>
-
-        <p>
-            Em meio à correria do dia a dia, muitas vezes nos afastamos do essencial, e o retiro surge
-            como esse espaço de reencontro, cuidado e crescimento espiritual.
-        </p>
-
-        <p>
-            Prepare o seu coração para dias marcantes de louvor, adoração e celebração, acompanhados
-            de estudo da Palavra de Deus, momentos de oração, comunhão entre irmãos e experiências
-            que fortalecem a fé. Tudo isso vivido em um ambiente acolhedor, cercado pela natureza
-            na Chácara Status.
-        </p>
-
-        <p>
-            Serão dias para criar memórias, fortalecer vínculos, ouvir a voz de Deus e renovar as forças
-            para continuar a caminhada.
-        </p>
-
-        <p style="text-align:center; font-weight:700; margin-top:25px;">
-            Vamos juntos nessa jornada!
-        </p>
-    </div>
-
-</section>
-
+        <div style="font-size:1.15rem; line-height:1.8; color:#333; max-width:900px; margin:0 auto; text-align:justify;">
+            <p>
+                Um tempo separado por Deus para renovo, restauração e comunhão intensa em Sua presença.
+                O retiro é mais do que alguns dias fora da rotina, é um convite para desacelerar e permitir
+                que Deus fale conosco de forma clara.
+            </p>
+            <p>
+                Em meio à correria do dia a dia, muitas vezes nos afastamos do essencial, e o retiro surge
+                como esse espaço de reencontro, cuidado e crescimento espiritual.
+            </p>
+            <p>
+                Prepare o seu coração para dias marcantes de louvor, adoração e celebração, acompanhados
+                de estudo da Palavra de Deus, momentos de oração, comunhão entre irmãos e experiências
+                que fortalecem a fé. Tudo isso vivido em um ambiente acolhedor, cercado pela natureza
+                na Chácara Status.
+            </p>
+            <p>
+                Serão dias para criar memórias, fortalecer vínculos, ouvir a voz de Deus e renovar as forças
+                para continuar a caminhada.
+            </p>
+            <p style="text-align:center; font-weight:700; margin-top:25px;">
+                Vamos juntos nessa jornada!
+            </p>
+        </div>
+    </section>
 
     <section class="carousel-section">
         <video autoplay muted loop playsinline class="video-bg">
@@ -320,7 +301,6 @@
                 <li>Campo de Futebol;</li>
                 <li>Espaço para Barracas e Casa de Apoio;</li>
                 <li>Área de Cultos e Celebrações.</li>
-                
             </ul>
         </div>
     </section>
