--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         
         <div class="carousel-content">
             <h2 class="section-title" style="color: var(--primary-green); text-align: center;">Memórias que Transformam</h2>
-            <p class="carousel-subtitle">momentos do nossos últimos retiros</p>
+            <p class="carousel-subtitle">momentos dos nossos últimos retiros</p>
             <div class="carousel-container">
                 <div class="carousel-track" id="carouselTrack">
                     <div class="carousel-slide"><img src="https://iili.io/fPvEY8l.png" alt="Foto 1"></div>
@@ -350,3 +350,4 @@
     </script>
 </body>
 </html>
+
