--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retiro Espiritual 2026 - IBJ</title>
+    <title>Retiro Espiritual - IBJ 2026</title>
     
     <link rel="icon" type="image/png" href="https://iili.io/fPsqAR1.md.png">
     
