--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <section class="hero hero-main">
-        <img src="https://iili.io/fPkRN5u.png" alt="Logo IBJ" class="church-logo">
+        <div style="height: 140px; margin-bottom: 20px; visibility: hidden;"></div> <!-- Espaçador para manter o texto na mesma posição -->
         <p class="hashtag">#IBJ21ANOS</p>
         <h1>RETIRO ESPIRITUAL - IBJ 2026</h1>
         <div class="date-badge">13/02 a 17/02 | Chácara Status</div>
@@ -55,6 +55,7 @@
             <p>Prepare o seu coração para dias marcantes de louvor, adoração e celebration, acompanhados de estudo da Palavra de Deus, momentos de oração, comunhão entre irmãos e experiências que fortalecem a fé. Tudo isso vivido em um ambiente acolhedor, cercado pela natureza na Chácara Status.</p>
             <p>Serão dias para criar memórias, fortalecer vínculos, ouvir a voz de Deus e renovar as forças para continuar a caminhada.</p>
             <p style="text-align:center; font-weight:700; margin-top:25px;">Vamos juntos nessa jornada!</p>
+            <p style="text-align:center; font-weight:700;">Pr. Anderson José</p>
         </div>
     </section>
 
