--- a/dia4.html
+++ b/dia4.html
@@ -12,6 +12,11 @@
 </head>
 <body>
 
+    <!-- Botão Home -->
+    <a href="index.html" class="home-button" title="Página Inicial">
+        🏠
+    </a>
+
     <!-- Menu hambúrguer -->
     <button class="menu-toggle" onclick="toggleMenu()">
         <div class="hamburger">
