--- a/dia2.html
+++ b/dia2.html
@@ -14,7 +14,9 @@
 
     <!-- Botão Home -->
     <a href="index.html" class="home-button" title="Página Inicial">
-        🏠
+        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/>
+        </svg>
     </a>
 
     <!-- Menu hambúrguer -->
