--- a/dia5.html
+++ b/dia5.html
@@ -31,7 +31,7 @@
     <!-- Menu overlay -->
     <div class="menu-overlay" id="menuOverlay">
         <div class="menu-content">
-            <h2>NAVEGAÇÃO</h2>
+            <h2>PROGRAMAÇÃO</h2>
             <div class="menu-links">
                 <a href="index.html" class="menu-link home">PÁGINA INICIAL</a>
                 <a href="dia1.html" class="menu-link">PRIMEIRO DIA</a>
