--- a/regras.html
+++ b/regras.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Primeiro Dia - Retiro Espiritual IBJ 2026</title>
+    <title>Regras de Boa Convivência - Retiro Espiritual IBJ 2026</title>
     
     <link rel="icon" type="image/png" href="https://iili.io/fPsqAR1.md.png">
     
@@ -47,23 +47,23 @@
 
     <section class="hero hero-day">
         <img src="https://iili.io/fPkRN5u.png" alt="Logo IBJ" class="church-logo">
-        <h1>PRIMEIRO DIA</h1>
-        <p class="day-subtitle">SEXTA-FEIRA (13/02)</p>
+        <h1>REGRAS DO RETIRO</h1>
+        <p class="day-subtitle">BOA CONVIVÊNCIA E COMUNHÃO</p>
     </section>
 
-    <!-- Seção Programação - Fundo Branco -->
+    <!-- Seção de Regras -->
     <section class="day-section programacao-section">
-        <h2>Programação do Primeiro Dia</h2>
-        <div class="content">
-            <p>A programação completa do primeiro dia será divulgada em breve. Prepare seu coração para um tempo especial de comunhão e adoração!</p>
-        </div>
-    </section>
-
-    <!-- Seção Momentos - Fundo Escuro -->
-    <section class="day-section momentos-section">
-        <h2>Momentos do Primeiro Dia</h2>
-        <div class="content">
-            <p>Aqui você encontrará as imagens e vídeos especiais que capturaram os melhores momentos do primeiro dia do nosso retiro.</p>
+        <h2>Diretrizes Gerais</h2>
+        <div class="content" style="text-align: left; max-width: 800px;">
+            <p>Para que tenhamos um tempo abençoado de comunhão e renovo, pedimos a colaboração de todos com as seguintes diretrizes:</p>
+            <ul style="margin-top: 20px; font-size: 1.1rem; line-height: 2;">
+                <li><strong>Respeito aos Horários:</strong> Esteja atento aos horários de cultos, refeições e atividades.</li>
+                <li><strong>Zelo pelo Local:</strong> Vamos cuidar da limpeza e conservação da Chácara Status.</li>
+                <li><strong>Comunhão:</strong> Aproveite este tempo para fortalecer laços com seus irmãos em Cristo.</li>
+                <li><strong>Participação:</strong> Sua presença em todas as programações é fundamental para o seu crescimento.</li>
+                <li><strong>Segurança:</strong> Siga as orientações da equipe organizadora para o bem de todos.</li>
+            </ul>
+            <p style="margin-top: 30px; font-style: italic; color: #666;">*Este é um modelo de texto. Você pode substituir estas regras pelas diretrizes específicas da organização do retiro.*</p>
         </div>
     </section>
 
