--- a/dia4.html
+++ b/dia4.html
@@ -34,6 +34,8 @@
             <h2>PROGRAMAÇÃO</h2>
             <div class="menu-links">
                 <a href="index.html" class="menu-link home">PÁGINA INICIAL</a>
+                <a href="regras.html" class="menu-link">REGRAS DE CONVIVÊNCIA</a>
+                <a href="identidade.html" class="menu-link">TEMA, DIVISA E HINO</a>
                 <a href="dia1.html" class="menu-link">PRIMEIRO DIA</a>
                 <a href="dia2.html" class="menu-link">SEGUNDO DIA</a>
                 <a href="dia3.html" class="menu-link">TERCEIRO DIA</a>
