--- a/identidade.html
+++ b/identidade.html
@@ -54,11 +54,11 @@
     <section class="day-section programacao-section">
         <div class="content">
             <h2 style="color: var(--accent-green); font-size: 2.5rem; margin-bottom: 10px;">TEMA</h2>
-            <p style="font-size: 2rem; font-weight: 800; text-transform: uppercase; margin-bottom: 40px;">[INSIRA O TEMA AQUI]</p>
+            <p style="font-size: 1.5rem; font-weight: 700; text-transform: uppercase; margin-bottom: 40px; color: #666;">Em breve nosso tema será divulgado...</p>
             
             <h2 style="color: var(--accent-green); font-size: 2.5rem; margin-bottom: 10px;">DIVISA</h2>
-            <p style="font-size: 1.4rem; font-style: italic; max-width: 700px; margin: 0 auto 10px auto;">"[INSIRA O TEXTO BÍBLICO DA DIVISA AQUI]"</p>
-            <p style="font-weight: 700;">— [REFERÊNCIA BÍBLICA]</p>
+            <p style="font-size: 1.2rem; font-style: italic; max-width: 700px; margin: 0 auto 10px auto; color: #666;">"Em breve nossa divisa será divulgada..."</p>
+            <p style="font-weight: 700; color: #666;">— Aguarde</p>
         </div>
     </section>
 
@@ -66,11 +66,9 @@
     <section class="day-section momentos-section">
         <h2>Hino Oficial</h2>
         <div class="content">
-            <p style="font-size: 1.2rem; margin-bottom: 30px; font-weight: 600;">[NOME DO HINO / MÚSICA]</p>
-            <div style="white-space: pre-line; line-height: 2; font-size: 1.1rem;">
-                [LETRA DO HINO - ESTROFE 1]
-                [LETRA DO HINO - CORO]
-                [LETRA DO HINO - ESTROFE 2]
+            <p style="font-size: 1.2rem; margin-bottom: 30px; font-weight: 600; color: #ccc;">Em breve nosso hino oficial será divulgado...</p>
+            <div style="white-space: pre-line; line-height: 2; font-size: 1.1rem; color: #ccc; font-style: italic;">
+                Aguarde a divulgação da letra oficial.
             </div>
         </div>
     </section>
