--- a/index.html
+++ b/index.html
@@ -109,6 +109,16 @@
     </section>
 
     <section class="payment-section">
+        <div class="vagas-container">
+            <h2 class="vagas-title">Vagas Preenchidas</h2>
+            <div class="progress-bar-bg">
+                <div class="progress-bar-fill" id="vagasBar">
+                    <span class="progress-text">55%</span>
+                </div>
+            </div>
+            <p class="vagas-alert">Corre que ainda dá tempo!</p>
+        </div>
+        
         <div class="payment-card">
             <div class="investment-side">
                 <h2>INVESTIMENTO</h2>
