--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <div class="registration-side">
                 <h2>INSCREVA-SE</h2>
                 <p style="margin:0; font-weight: 700; color: var(--accent-green);">Inscrição e Pagamento pelo número abaixo</p>
-                <p style="margin:5px 0 0 0; font-weight: 500;">Clique abaixo para copiar a chave Pix</p>
+                <p style="margin:5px 0 0 0; font-weight: 500;">Clique para copiar a chave Pix</p>
                 
                 <div class="pix-container" onclick="copyPix()">
                     <span class="pix-key" id="pixKey">65998446011</span>
