--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <section class="payment-section">
         <div class="vagas-container">
-            <h2 class="vagas-title">Vagas Preenchidas</h2>
+            <h2 class="vagas-title">Status das Vagas</h2>
             <div class="progress-bar-bg">
                 <div class="progress-bar-fill" id="vagasBar">
                     <span class="progress-text">55%</span>
@@ -142,7 +142,7 @@
             <div class="registration-side">
                 <h2>INSCREVA-SE</h2>
                 <p style="margin:0; font-weight: 700; color: var(--accent-green);">Inscrição e Pagamento pelo número abaixo</p>
-                <p style="margin:5px 0 0 0; font-weight: 500;">Clique para copiar a chave Pix</p>
+                <p style="margin:5px 0 0 0; font-weight: 500;">Clique abaixo para copiar a chave Pix</p>
                 
                 <div class="pix-container" onclick="copyPix()">
                     <span class="pix-key" id="pixKey">65998446011</span>
