--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="about-text" style="text-align:justify;">
             <p>Um tempo separado por Deus para renovo, restauração e comunhão intensa em Sua presença. O retiro é mais do que alguns dias fora da rotina, é um convite para desacelerar e permitir que Deus fale conosco de forma clara.</p>
             <p>Em meio à correria do dia a dia, muitas vezes nos afastamos do essencial, e o retiro surge como esse espaço de reencontro, cuidado e crescimento espiritual.</p>
-            <p>Prepare o seu coração para dias marcantes de louvor, adoração e celebration, acompanhados de estudo da Palavra de Deus, momentos de oração, comunhão entre irmãos e experiências que fortalecem a fé. Tudo isso vivido em um ambiente acolhedor, cercado pela natureza na Chácara Status.</p>
+            <p>Prepare o seu coração para dias marcantes de louvor, adoração e celebração, acompanhados de estudo da Palavra de Deus, momentos de oração, comunhão entre irmãos e experiências que fortalecem a fé. Tudo isso vivido em um ambiente acolhedor, cercado pela natureza na Chácara Status.</p>
             <p>Serão dias para criar memórias, fortalecer vínculos, ouvir a voz de Deus e renovar as forças para continuar a caminhada.</p>
             <p style="text-align:center; font-weight:700; margin-top:25px;">Vamos juntos nessa jornada!</p>
             <p style="text-align:center; font-weight:700;">Pr. Anderson José</p>
@@ -142,7 +142,7 @@
             <div class="registration-side">
                 <h2>INSCREVA-SE</h2>
                 <p style="margin:0; font-weight: 700; color: var(--accent-green);">Inscrição e Pagamento pelo número abaixo</p>
-                <p style="margin:5px 0 0 0; font-weight: 500;">Clique abaixo para copiar a chave Pix</p>
+                <p style="margin:5px 0 0 0; font-weight: 500;">Clique para copiar a chave Pix</p>
                 
                 <div class="pix-container" onclick="copyPix()">
                     <span class="pix-key" id="pixKey">65998446011</span>
