--- a/index.html
+++ b/index.html
@@ -110,10 +110,10 @@
 
     <section class="payment-section">
         <div class="vagas-container">
-            <h2 class="vagas-title">Status das Vagas</h2>
+            <h2 class="vagas-title">Vagas Preenchidas</h2>
             <div class="progress-bar-bg">
                 <div class="progress-bar-fill" id="vagasBar">
-                    <span class="progress-text">55%</span>
+                    <span class="progress-text">63%</span>
                 </div>
             </div>
             <p class="vagas-alert">Corre que ainda dá tempo!</p>
